// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Convert direcotry to tree on Unix > 1. should render correctly with Group_by_dir + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "fullLabel": "ui-framework/src/images",
                "groupType": "dir",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basename": "blender.png",
                    "dirPath": "ui-framework/src/images",
                    "extname": "png",
                    "name": "blender",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "groupType": "dir",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "d3.png",
                "dirPath": "ui-framework/webview",
                "extname": "png",
                "name": "d3",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 2. should render correctly with Group_by_dir + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "fullLabel": "ui-framework/src/images",
            "groupType": "dir",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "blender.png",
                "dirPath": "ui-framework/src/images",
                "extname": "png",
                "name": "blender",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "d3.png",
                "dirPath": "ui-framework/webview",
                "extname": "png",
                "name": "d3",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 3. should render correctly with Group_by_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "fileType": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "ui-framework/src/images",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "ui-framework/webview",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "fileType": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "fileType": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 4. should render correctly with Group_by_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "fileType": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "ui-framework/src/images",
            "extname": "png",
            "name": "blender",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "ui-framework/webview",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "fileType": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "fileType": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 5. should render correctly with Group_by_dir_and_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "fileType": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "fileType": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
                  "fileType": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
                  "fileType": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
              {
                "children": [
                  {
                    "children": [],
                    "fullLabel": "png",
                    "groupType": "fileType",
                    "label": "png",
                    "renderCondition": {
                      "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                      "fileType": "png",
                      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "renderList": [
                      {
                        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                        "basename": "blender.png",
                        "dirPath": "ui-framework/src/images",
                        "extname": "png",
                        "name": "blender",
                        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                        "workspaceFolder": "src",
                      },
                    ],
                    "value": "png",
                  },
                  {
                    "children": [],
                    "fullLabel": "svg",
                    "groupType": "fileType",
                    "label": "svg",
                    "renderCondition": {
                      "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                      "fileType": "svg",
                      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "value": "svg",
                  },
                ],
                "fullLabel": "ui-framework/src/images",
                "groupType": "dir",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "fileType": "",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "groupType": "dir",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "fileType": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basename": "d3.png",
                    "dirPath": "ui-framework/webview",
                    "extname": "png",
                    "name": "d3",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "fileType": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "fileType": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "blender.png",
                "dirPath": "webview",
                "extname": "png",
                "name": "blender",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "fileType": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "fileType": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 6. should render correctly with Group_by_dir_and_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "fileType": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "fileType": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "fileType": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basename": "blender.png",
                    "dirPath": "ui-framework/src/images",
                    "extname": "png",
                    "name": "blender",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "fileType": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/src/images",
            "groupType": "dir",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "fileType": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basename": "d3.png",
                    "dirPath": "ui-framework/webview",
                    "extname": "png",
                    "name": "d3",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "fileType": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "fileType": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "blender.png",
                "dirPath": "webview",
                "extname": "png",
                "name": "blender",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "fileType": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "fileType": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 7. should render correctly with Group_by_none + Nested 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "webview",
        "extname": "png",
        "name": "blender",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "ui-framework/src/images",
        "extname": "png",
        "name": "blender",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "ui-framework/webview",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 8. should render correctly with Group_by_none + Compact 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "webview",
        "extname": "png",
        "name": "blender",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "ui-framework/src/images",
        "extname": "png",
        "name": "blender",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "ui-framework/webview",
        "extname": "png",
        "name": "d3",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 1. should render correctly with Group_by_dir + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "fullLabel": "c:ui-framework/src/images",
                "groupType": "dir",
                "label": "images",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              },
            ],
            "fullLabel": "c:ui-framework/src",
            "groupType": "dir",
            "label": "src",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
          },
        ],
        "fullLabel": "c:ui-framework",
        "groupType": "dir",
        "label": "c:ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "d3.png",
                "dirPath": "ui-framework/webview",
                "extname": "png",
                "name": "d3",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 2. should render correctly with Group_by_dir + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "c:ui-framework/src/images",
        "groupType": "dir",
        "label": "c:ui-framework/src/images",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
      },
      {
        "children": [],
        "fullLabel": "ui-framework/webview",
        "groupType": "dir",
        "label": "ui-framework/webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "ui-framework/webview",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 3. should render correctly with Group_by_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "fileType": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "c:ui-framework/src/images",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "ui-framework/webview",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "fileType": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "fileType": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 4. should render correctly with Group_by_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "fileType": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "webview",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "blender.png",
            "dirPath": "c:ui-framework/src/images",
            "extname": "png",
            "name": "blender",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "ui-framework/webview",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "fileType": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "fileType": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 5. should render correctly with Group_by_dir_and_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "fileType": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "fileType": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
                  "fileType": "png",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
                  "fileType": "svg",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
              {
                "children": [
                  {
                    "children": [],
                    "fullLabel": "png",
                    "groupType": "fileType",
                    "label": "png",
                    "renderCondition": {
                      "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                      "fileType": "png",
                      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "value": "png",
                  },
                  {
                    "children": [],
                    "fullLabel": "svg",
                    "groupType": "fileType",
                    "label": "svg",
                    "renderCondition": {
                      "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                      "fileType": "svg",
                      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "value": "svg",
                  },
                ],
                "fullLabel": "c:ui-framework/src/images",
                "groupType": "dir",
                "label": "images",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                  "fileType": "",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              },
            ],
            "fullLabel": "c:ui-framework/src",
            "groupType": "dir",
            "label": "src",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
              "fileType": "",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
          },
        ],
        "fullLabel": "c:ui-framework",
        "groupType": "dir",
        "label": "c:ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "groupType": "fileType",
                "label": "png",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "png",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    "basename": "d3.png",
                    "dirPath": "ui-framework/webview",
                    "extname": "png",
                    "name": "d3",
                    "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "groupType": "fileType",
                "label": "svg",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "fileType": "svg",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "groupType": "dir",
            "label": "webview",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "fileType": "",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "groupType": "dir",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "blender.png",
                "dirPath": "webview",
                "extname": "png",
                "name": "blender",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "fileType": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 6. should render correctly with Group_by_dir_and_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "groupType": "fileType",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "fileType": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "d3.png",
            "dirPath": "",
            "extname": "png",
            "name": "d3",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "groupType": "fileType",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "fileType": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basename": "root.svg",
            "dirPath": "",
            "extname": "svg",
            "name": "root",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "c:ui-framework/src/images",
        "groupType": "dir",
        "label": "c:ui-framework/src/images",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "d3.png",
                "dirPath": "ui-framework/webview",
                "extname": "png",
                "name": "d3",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "ui-framework/webview",
        "groupType": "dir",
        "label": "ui-framework/webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "groupType": "fileType",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basename": "blender.png",
                "dirPath": "webview",
                "extname": "png",
                "name": "blender",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "groupType": "fileType",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "fileType": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "groupType": "dir",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "fileType": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "fileType": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 7. should render correctly with Group_by_none + Nested 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "webview",
        "extname": "png",
        "name": "blender",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "c:ui-framework/src/images",
        "extname": "png",
        "name": "blender",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "ui-framework/webview",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 8. should render correctly with Group_by_none + Compact 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "groupType": "workspace",
    "label": "src",
    "renderCondition": {
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "root.svg",
        "dirPath": "",
        "extname": "svg",
        "name": "root",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "webview",
        "extname": "png",
        "name": "blender",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "blender.png",
        "dirPath": "c:ui-framework/src/images",
        "extname": "png",
        "name": "blender",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basename": "d3.png",
        "dirPath": "ui-framework/webview",
        "extname": "png",
        "name": "d3",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;
